@@ -112,6 +112,7 @@ fake_conduction.o : ../../Modules/recvec.o
 fake_conduction.o : ../../Modules/uspp.o
 fake_conduction.o : ../../Modules/wannier_gw.o
 fake_conduction.o : ../../Modules/wavefunctions.o
+fake_conduction.o : ../../Modules/wrappers.o
 fake_conduction.o : ../../PW/src/g_psi_mod.o
 fake_conduction.o : ../../PW/src/pwcom.o
 fake_conduction.o : fft_custom.o
